--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "shuffling",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple module to shuffle any sequence with the Fisher-Yates algorithm",
   "author": "Ogus",
   "license": "WTFPL",
   "main": "src/shuffling.js",
   "scripts": {
-    "build": "terser src/shuffling.js -c -m reserved=['Shuffling'] > src/shuffling.min.js"
+    "test": "node test/test.js | faucet",
+    "build": "uglifyjs src/shuffling.js -c -m reserved=['Shuffling'] -o src/shuffling.min.js"
   },
   "devDependencies": {
-    "mocha": "^5.0.0"
+    "faucet": "0.0.1",
+    "tape": "^4.10.1",
+    "uglify-js": "^3.4.9"
   },
   "keywords": [
     "array",
